--- a/Resources/views/manager.html.twig
+++ b/Resources/views/manager.html.twig
@@ -145,7 +145,7 @@
     }
 
     // display session flash messages
-    {% for type, messages in app.flashes %}
+    {% for type, messages in app.session.flashBag.all %}
     {% for message in messages %}
     displayAlert('{{ type }}', '{{ message|trans|e('js') }}')
     {% endfor %}
